bug fix for bug #11199, should remove partially created output file.